챌린지 및 개인대시보드 삭제 시 연관 매핑 테이블도 제거 및 검색 시 역순 반환 (#179)
* Feat(#74): 카테고리 검색 메서드 추가

* Test(#81):

* Feat(#81): 카테고리 검색 메서드 추가

* Feat(#81): 카테고리 검색 메서드 추가

* Feat(#81): 카테고리 클래스 추가

* Feat(#81): 챌린지 엔티티에 카테고리 필드 추가

* Feat(#81): 카테고리 필드 추가

* Feat(#81): 카테고리 검색 메서드 추가

* Feat(#81): 카테고리 필드 추가

* Test(#81): 챌린지 카테고리 검색 테스트

* Fix(#81): 카테고리 타입 변경

* Fix(#81): 카테고리 타입 변경

* Fix(#81): 카테고리 타입 변경

* Docs(#90): enum 항목 설명 추가

* Refactor(#97): 매직 넘버 상수로 변환

* Refactor(#104): responseDto에 challengeId 추가

* Refactor(#97): 메서드 분리

* Refacor(#97): 싱글턴 패턴으로 변경

* Test(#97): 싱글턴 패턴으로 변경

* Refacor(#97): cycle 검증을 도메인 계층에서 하도록 변경

* Test(#97): 테스트 코드 오류 수정

* Refactor(#138): 챌린지 생성 시 생성 날짜 자동 주입 및 블록 이름 추가

* Test(#139): 쿼리 파라미터 추가

* Docs(#139): 쿼리 파라미터 추가 및 카테거리 검색 API 추가

* Feat(#141): 이미지 업로드 기능 추가

* Feat(#141): 의존성 추가

* Test(#141): 이미지 업로드 테스트

* Docs(#141): 문서 업데이트

* Test(#141): 이미지 업로드 테스트

* Refactor(#141): url 고유하도록 변경

* Refactor(#141): url 고유하도록 변경

* Refactor(#141): url 고유하도록 변경

* Refactor(#141): 불필요한 주석 제거

* Feat: 카테고리와 키워드를 통해 챌린지 검색하는 기능 추가

* Refactor(#148): 챌린지 카테고리 및 키워드 검색 api 하나로 통합

* Refactor(#153): 챌린지 상세조회 반환값 수정

* Refactor(#153): 챌린지 실시간 완료자 반환하도록 수정

* Refactor(#153): 챌린지 주기마다 블록이 새로 생성되도록 변경

* Refactor(#153): 필요없는 주석 제거

* Refacotr(#161): 이미지 수정 시 null 반환하는 오류 해결

* Fix(#163): 매개변수 수정

* Feat(#165): 챌린지 탈퇴 api 추가

* Fix(#170): 챌린지 생성 안되는 오류 해결

* Fix(#170): 챌린지 생성 안되는 오류 해결

* Fix(#170): 챌린지 생성 안되는 오류 해결

* Fix(#170): 챌린지 생성 안되는 오류 해결

* Fix(#170): 챌린지 추가 시 챌린지 블록 생성 안되는 오류 해결

* Fix(#170): 챌린지 추가 시 챌린지 블록 생성 안되는 오류 해결

* Refactor: 역순으로 반환하도록 변경

* Refactor(#177): 개인 대시보드 삭제 시 챌린지 매핑 연관관계 제거

* Refactor(#177): 챌린지 삭제 시 챌린지 매핑 연관관계 제거

* Refactor(#177): 챌린지 삭제 시 챌린지 매핑 연관관계 제거

* Refactor(#177): 줄바꿈 수정

* Refactor(#177): 메시지 수정

* Refactor(#177): 개인 대시보드 삭제 시 챌린지 매핑 연관관계 제거

* Refactor: 알림 메시지 수정