@@ -2,6 +2,7 @@ package shop.kkeujeok.kkeujeokbackend.challenge.application;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -24,6 +25,7 @@ import shop.kkeujeok.kkeujeokbackend.challenge.domain.Challenge;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.ChallengeMemberMapping;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.CycleDetail;
 import shop.kkeujeok.kkeujeokbackend.challenge.domain.repository.ChallengeRepository;
+import shop.kkeujeok.kkeujeokbackend.challenge.domain.repository.challengeMemberMapping.ChallengeMemberMappingRepository;
 import shop.kkeujeok.kkeujeokbackend.challenge.exception.ChallengeAccessDeniedException;
 import shop.kkeujeok.kkeujeokbackend.challenge.exception.ChallengeNotFoundException;
 import shop.kkeujeok.kkeujeokbackend.dashboard.domain.Dashboard;
@@ -41,7 +43,7 @@ import shop.kkeujeok.kkeujeokbackend.notification.application.NotificationServic
 @RequiredArgsConstructor
 public class ChallengeService {
 
-    private static final String CHALLENGE_JOIN_MESSAGE = "%s님이 챌린지에 참여했습니다";
+    private static final String CHALLENGE_JOIN_MESSAGE = "챌린지 참여: %s님이 챌린지에 참여했습니다";
     private static final String START_DATE_FORMAT = "yyyy.MM.dd HH:mm";
     private static final String DEADLINE_DATE_FORMAT = "yyyy.MM.dd 23:59";
 
@@ -51,6 +53,7 @@ public class ChallengeService {
     private final BlockRepository blockRepository;
     private final NotificationService notificationService;
     private final S3Service s3Service;
+    private final ChallengeMemberMappingRepository challengeMemberMappingRepository;
 
     @Transactional
     public ChallengeInfoResDto save(String email, ChallengeSaveReqDto challengeSaveReqDto,
@@ -132,6 +135,9 @@ public class ChallengeService {
         Challenge challenge = findChallengeById(challengeId);
         verifyMemberIsAuthor(challenge, member);
 
+        Set<ChallengeMemberMapping> challengeMemberMappings = challenge.getParticipants();
+        challenge.getParticipants().removeAll(challengeMemberMappings);
+
         challenge.updateStatus();
     }
 
@@ -204,10 +210,13 @@ public class ChallengeService {
 
         List<ChallengeInfoResDto> challengeInfoResDtoList = challenges.stream()
                 .map(ChallengeInfoResDto::from)
-                .toList();
+                .collect(Collectors.toList());
+
+        Collections.reverse(challengeInfoResDtoList); // 리스트를 역순으로 변경
 
         return ChallengeListResDto.of(challengeInfoResDtoList, PageInfoResDto.from(challenges));
     }
+
 
     @Transactional
     public void withdrawFromChallenge(String email, Long challengeId) {
